--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div class="page">
-    <header class="header">
+   <header class="header">
       <img class="header__logo" src="./images/logo/header-logo.svg" alt="Карта России"> 
-      <p><a class="header__lang-link header__lang-link_included" href="#">Ru</a></p>
-      <p><a class="header__lang-link" href="#">En</a></p>
-    </header>
+      <a class="header__lang-link header__lang-link_included" href="#">Ru</a>
+      <a class="header__lang-link" href="#">En</a>
+    </header> 
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -51,7 +51,7 @@
         <img class="place__image" src="./images/place-kosa.jpg" alt="коса">
         <div class="place__website">
           <p class="place__website_url-heading">URL</p>
-          <p><a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a></p>
+          <a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
         <div class="place__paragraph">
         <p class="place__paragraph_text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
