--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendor/normalize.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
 <body>
   <div class="page">
    <header class="header">
       <img class="header__logo" src="./images/logo/header-logo.svg" alt="Карта России"> 
+      <div>
       <a class="header__lang-link header__lang-link_included" href="#">Ru</a>
       <a class="header__lang-link" href="#">En</a>
+      </div>
     </header> 
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
@@ -24,11 +25,11 @@
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li>Часовых поясов 11</li>
-        <li>Объектов природного наследия ЮНЕСКО 12</li>
-        <li>Объектов культурного наследия ЮНЕСКО 16</li>
-        <li>Природных заповедников 105</li>
-        <li>Аэропортов 241</li>
+        <li>Часовых поясов <span class="intro__list_mod">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_mod">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_mod">16</span></li>
+        <li>Природных заповедников <span class="intro__list_mod">105</span></li>
+        <li>Аэропортов <span class="intro__list_mod">241</span></li>
       </ul>
     </section>
     <section class="photo-grid">
@@ -114,18 +115,19 @@
       </div>
     </section>
     <section class="cover">
-      <h2 class="cover__title"><a class="cover__title_link" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a></h2>
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <h2 class="cover__title">До Байкала «на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      <div class="cover__overlay"></div>
+      </a>
     </section>
     <footer class="footer">
-      <div class="footer__links">
+      <nav class="footer__links">
         <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
         <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
         <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
         <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
         <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-      </div>
+      </nav>
       <p class="footer__copyright">&copy; 2020. Cамсон</p>
     </footer>
   </div>
