--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="page">
-   <header class="header">
+    <header class="header">
       <img class="header__logo" src="./images/logo/header-logo.svg" alt="Карта России"> 
       <div>
       <a class="header__lang-link header__lang-link_included" href="#">Ru</a>
@@ -131,4 +131,5 @@
       <p class="footer__copyright">&copy; 2020. Cамсон</p>
     </footer>
   </div>
-</body>
+  </body>
+</html>
