--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <h3 class="place__title">Куршская коса</h3>
         <img class="place__image" src="./images/place-kosa.jpg" alt="коса">
         <div class="place__website">
-          <p class="place__website_url-heading">URL</p>
-          <a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
         <div class="place__paragraph">
         <p class="place__paragraph_text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -63,8 +63,8 @@
         <h3 class="place__title">Кольский</h3>
         <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
         <div class="place__website">
-          <p class="place__website_url-heading">URL</p>
-          <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
         </div>
         <div class="place__paragraph">
         <p class="place__paragraph_text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -77,8 +77,8 @@
         <h3 class="place__title">Алтай</h3>
         <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
         <div class="place__website">
-          <p class="place__website_url-heading">URL</p>
-          <a class="place__website_link place__website_link_hover" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+          <p class="place__url-heading">URL</p>
+          <a class="place__link place__website_link_hover" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
         </div>
         <div class="place__paragraph">
           <p class="place__paragraph_text">Алтай — одно из красивейших мест в России. 
@@ -90,8 +90,8 @@
         <h3 class="place__title">Зимний Байкал</h3>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="байкал">
         <div class="place__website">
-          <p class="place__website_url-heading">URL</p>
-          <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
         <div class="place__paragraph">
           <p class="place__paragraph_text">Всем известен Байкал как крупнейшее озеро 
@@ -104,8 +104,8 @@
         <h3 class="place__title">Карелия</h3>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
         <div class="place__website">
-          <p class="place__website_url-heading">URL</p>
-          <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+          <p class="place__url-heading">URL</p>
+          <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
         </div>
         <div class="place__paragraph">
           <p class="place__paragraph_text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
