--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <div class="lead_content">
+        <div class="lead__content">
           <img class="lead__image" src="./images/__image.svg" alt="маршрут Путешествия">
           <p class="lead__caption">ваша полка — верхняя</p>
         </div>
