--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@
           </div>
           <div class="place__paragraph">
             <p class="place__text">
-              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива
-              с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
-              российского анклава.
+              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона 
+              на краю российского анклава.
             </p>
             <p class="place__text">
-              На этом Калининградская область не заканчивается. Для путешественника
-              и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
-              и запах стального, прохладного моря.
+              На этом Калининградская область не заканчивается. 
+Для путешественника &#8232;и исследователя там же &#8232;по соседству — самая западная точка России, Балтийская коса, — &shy;и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная &#8232;в спокойствие природы и запах стального, прохладного моря.
             </p>
           </div>
         </div>
